--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,6 +1,5 @@
 ---
 import Chips from "./Chips.astro";
-import StandardArticle from "./StandardArticle.astro";
 import me from '../assets/aboutMe.webp'
 import { Image } from "astro:assets";
 import 'react-indiana-drag-scroll/dist/style.css';
@@ -21,7 +20,8 @@ const chips = [
   'Curioso'
 ]
 ---
-<StandardArticle span={{col:2}} >
+
+<article class="mainArticle" id="articleAboutMe">
   <div class="aboutMe">
     <Image src={me} alt="Michael Lara Sánchez" class="aboutMe__image" width={500} />
     <div class="aboutMe__text">
@@ -32,39 +32,27 @@ const chips = [
       </div>
       </div>
   </div>
-</StandardArticle>
-<StandardArticle isBtn>
-  <GitHubAboutme/>
-</StandardArticle>
+</article>
 
+<article class="mainArticle mainArticle--btn" id="articleGitHub">
+    <GitHubAboutme/>
+</article>
 
-
-
-
-
-
-<StandardArticle span={{col:2}}>
+<article class="mainArticle" id="articleExperience">
   <div class="experience__container">
     <h2 class="experience__title">Experiencia</h2>
     <Experience client:load />
   </div>
-</StandardArticle>
+</article>
 
-
-
-
-
-
-
-<article class="mainArticle training__container" >
+<article class="mainArticle" id="articleTraining" >
   <div class="training">
     <h2>Formación</h2>
     <TrainingAcordion client:load />
   </div>
 </article>
 
-
-<StandardArticle cId="AboutmeExperience">
+<article class="mainArticle" id="articleExperiences">
   <a href="#experienceMainBanner" class="AboutmeExperience">
     <div>
       <SimpleCode/>
@@ -74,11 +62,114 @@ const chips = [
       </div>
     </div>
   </a>
-</StandardArticle>
-<StandardArticle isBtn>
+</article>
+
+
+<article class="mainArticle mainArticle--btn" id="articleLinkedin">
   <LinkedinAboutme/>
-</StandardArticle>
+</article>
+
 <style lang="scss">
+  // Main article
+  .mainArticle{
+    overflow: hidden;
+    background-color: #334a7963;
+    border: 1px solid #62769F;
+    color: white;
+    backdrop-filter: blur(4px);
+    box-shadow: #00000070 0px 5px 13px 0px;
+    transition: all 1s;
+    border-radius: 1.25rem;
+    padding: 1.9rem;
+
+    &--btn{
+      padding: 0;
+    }
+
+    &--square{
+      aspect-ratio:1/1;
+    }
+
+    &--circle{
+      border-radius: 50%
+    }
+  }
+
+  #articleAboutMe{
+    grid-column: span 2;
+  }
+
+  #articleExperience{
+    grid-column: span 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    @media screen and (max-width: 1100px) {
+      grid-row: 2;
+      grid-column: 1/3;
+    }
+  }
+
+  #articleLinkedin{
+    @media screen and (max-width: 1100px){
+      grid-row: 4;
+      grid-column: 1;
+    }
+
+    @media screen and (max-width: 850px){
+      grid-column: 2;
+      grid-row: 3;
+    }
+  }
+
+  #articleTraining{
+    grid-column: 3;
+    grid-row: span 2;
+    padding:1.9rem;
+    border-radius: 1.25rem;
+    overflow: hidden;
+    background-color: #334a7963;
+    border: 1px solid #62769F;
+    color: white;
+    backdrop-filter: blur(4px);
+    box-shadow: #00000070 0px 5px 13px 0px;
+    transition: all 1s;
+    
+    @media screen and (max-width: 1100px) {
+      grid-column: 2;
+      grid-row: 3/5;
+    }
+
+    @media screen and (max-width: 850px){
+      grid-column: 1/3;
+      grid-row: 4;
+    }
+
+    .training{
+      display: flex;
+      flex-direction: column;
+      gap: 3rem;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      @media screen and (max-width: 1100px) {
+        grid-row: 2;
+        padding: 0;
+      }
+      h2{
+        font-size: min(2rem, 5vw);
+        text-transform: uppercase;
+        color:#FCA311;
+      }
+    }
+  }
+
+  #articleExperiences{
+    @media screen and (max-width: 1100px) {
+      grid-column: span 2;
+    }
+  }
 
   .aboutMe{
     position: relative;
@@ -101,6 +192,9 @@ const chips = [
       display: flex;
       flex-direction: column;
       gap:1.3rem;
+      >p{
+        line-height: 1.6;
+      }
       @media screen and (max-width: 800px){
         width: 100%;
       }
@@ -290,41 +384,6 @@ const chips = [
       align-items: center;
       height: 100%; 
       font-weight:700 ;
-    }
-  }
-
-  .training__container{
-    grid-column: 3;
-    grid-row: span 2;
-    padding:1.9rem;
-    border-radius: 1.25rem;
-    overflow: hidden;
-    background-color: #334a7963;
-    border: 1px solid #62769F;
-    color: white;
-    backdrop-filter: blur(4px);
-    box-shadow: #00000070 0px 5px 13px 0px;
-    transition: all 1s;
-    @media screen and (max-width: 1100px) {
-      grid-row: 2;
-    }
-    .training{
-      display: flex;
-      flex-direction: column;
-      gap: 3rem;
-      align-items: center;
-      justify-content: center;
-      height: 100%;
-      padding: 0rem 2rem;
-      @media screen and (max-width: 1100px) {
-        grid-row: 2;
-        padding: 0;
-      }
-      h2{
-        font-size: min(3rem, 7.5vw);
-        text-transform: uppercase;
-        color:#FCA311;
-      }
     }
   }
 
