--- a/src/components/Expience.scss
+++ b/src/components/Expience.scss
@@ -34,6 +34,19 @@
         line-height: 1.4;
       }
     }
+    >.experience__tech-list{
+      display: flex;
+      gap: .5rem 1rem;
+      flex-wrap: wrap;
+      margin-left: 24px;
+      >.chip {
+        display: inline-block;
+        padding: .5rem 1rem;
+        font-size: 16px;
+        border-radius: 15rem;
+        background-color: #f1f1f12e;
+      }
+    }
   }
 }
 .experience__line {
