--- a/src/components/GitHubAboutme.astro
+++ b/src/components/GitHubAboutme.astro
@@ -73,6 +73,7 @@ import bgImage from '../assets/gitScreenShot.jpeg'
     width: 100%;
     text-decoration: none;
     position:relative;
+    display: block;
     >.GitHubAboutme__bg{
       position: absolute;
       top: 0;
@@ -94,10 +95,11 @@ import bgImage from '../assets/gitScreenShot.jpeg'
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      box-sizing: border-box;
       @media screen and (max-width: 1100px) {
         // aspect-ratio: 1/1 ;
         padding: 1rem;
-        height: auto;
+        height: 100%;
       }
       @media screen and (max-width: 500px){
         span{
